# white-room-sam-sampler

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  PLANNED_SOUNDWORK_REPORT.md  README.md  SAMPLE_LOADING_IMPLEMENTATION.md  SAMPLE_SETUP_REPORT.md  SOUNDFONT_IMPLEMENTATION_SUMMARY.md  create_roland_sf2s.py  test_enhanced_features.cpp
docs/: BUILD.md  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  PARAMETERS.md  PRESETS.md  QUICK_REFERENCE.md
include/dsp/: SamSamplerDSP.h
plugins/AUv3/: IMPLEMENTATION_SUMMARY.md  README.md  build.sh
plugins/AUv3/SamSamplerPluginApp/: AppDelegate.swift  Info.plist  SamSamplerPluginApp.entitlements  ViewController.swift
plugins/AUv3/SamSamplerPluginExtension/: AudioUnit.swift  AudioUnitViewController.swift  Info.plist  SamSamplerDSPWrapper.swift
plugins/AUv3/SharedDSP/: CMakeLists.txt  SamSamplerDSP.cpp  SamSamplerDSP.h
plugins/dsp/src/dsp/: SamSamplerDSP_Pure.cpp  SamSamplerStereo.cpp
plugins/dsp/src/plugin/: SamSamplerPluginEditor.h  SamSamplerPluginProcessor.cpp  SamSamplerPluginProcessor.h
plugins/dsp/src/shared/: ParameterDefinitions.h
plugins/dsp/src/shared/design_system/themes/: BrutalistHardwareLookAndFeel.h  OrganicStudioLookAndFeel.h  UltraMinimalLookAndFeel.h
plugins/dsp/tests/: CMakeLists.txt
sf2/: roland_cr78_test.sf2  roland_tr808.sf2  salamander_grand_v1.sf2
sf2_local/: README.md  basic_drums.sf2  create_test_sf2.py
src/: SamSamplerPlugin.cpp
src/plugin/: SamSamplerPluginEditor.cpp  SamSamplerPluginProcessor.cpp  SamSamplerPluginProcessor.h
src/shared/design_system/: DesignSystem.h  README.md
src/shared/design_system/themes/: RetroFuturisticTronLookAndFeel.h  RobotechLookAndFeel.h
tests/: SamSamplerComprehensiveTest.cpp
